--- a/static/style.css
+++ b/static/style.css
@@ -714,7 +714,7 @@ input[type=text]::-webkit-datetime-edit, input[type=text]::-webkit-datetime-edit
 }
 
 input[type=text] {
-  width: 91.666667%;
+  width: 75%;
   border-radius: 0.25rem;
 }
 
@@ -763,6 +763,23 @@ select {
   background-size: 1.5em 1.5em;
   padding-right: 2.5rem;
   print-color-adjust: exact;
+  max-width: 75%;
+}
+
+.form-inline {
+  display: flex;
+}
+
+.form-inline select {
+  flex: 1 1 0%;
+}
+
+.form-inline button {
+  flex: none;
+}
+
+.column-container {
+  @apply: w-fit;
 }
 
 *, ::before, ::after {
@@ -822,10 +839,6 @@ select {
   position: fixed;
 }
 
-.absolute {
-  position: absolute;
-}
-
 .top-0 {
   top: 0px;
 }
@@ -844,10 +857,6 @@ select {
 
 .mb-0 {
   margin-bottom: 0px;
-}
-
-.ml-2 {
-  margin-left: 0.5rem;
 }
 
 .block {
@@ -878,10 +887,6 @@ select {
   display: none;
 }
 
-.h-4 {
-  height: 1rem;
-}
-
 .h-full {
   height: 100%;
 }
@@ -890,12 +895,14 @@ select {
   width: 100%;
 }
 
-.w-4 {
-  width: 1rem;
-}
-
 .max-w-xs {
   max-width: 20rem;
+}
+
+.max-w-fit {
+  max-width: -webkit-fit-content;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
 }
 
 .flex-none {
